task(jvm) allowing ByteBuddy Agent to be dynamically loaded
ref: #27766